2004-08-25 Florian Boor <florian.boor@kernelconcepts.de>

	* Released V 0.0.12

2004-08-24 Florian Boor <florian.boor@kernelconcepts.de>
	Makefile: Install binary suid.

2004-08-19 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: Fix unterminated list causing segfault.
	* Released V 0.0.11
	* Fixed some labels.

2004-08-18 Nils Faerber <nils.faerber@kernelconcepts.de>
	* Created a new error dialog box for ipkg errors
	* Error messages are now redirected into the messages notebook tab
	* Only *one* ipkg error dialog will pop up even for multiple errors
	  (until user acknowledges it)

2004-07-29 Florian Boor <florian.boor@kernelconcepts.de>
	* Released V 0.0.10
	* Makefile: Fixed version. 
	* main.c, interface.c, packages.c: Several minor fixes.

2004-07-27 Florian Boor <florian.boor@kernelconcepts.de>
	* po/gpe-package.pot: Added translation files.

2004-06-12 Florian Boor <florian.boor@kernelconcepts.de>
	* Makefile: Version 0.1.0 is what we are working on. 
	* Makefile: Updated to latest standards.
	* main.c: Removed obsolete definition of _GNU_SOURCE.
	
2004-06-11 Florian Boor <florian.boor@kernelconcepts.de>
	* main.c: Moving the kill() call to a better place, many thanks Phil!
	
2004-05-26 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: removed hardcoded toolbar style.

2004-03-12 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c, packages.*: Implemented package information facility.
	* interface.c: Some fixes and code cleanups.
	* Makefile: Several fixes to use pkg-config correctly.
	* Released V 0.0.9
	
2004-02-21 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: Help function implemented.

2004-02-11 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: Added list filtering from menu.
	* interface.c: Status messages for update ops.
	* interface.c: Added about dialog.
	
2004-02-10 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: Made basic frontend work again. We create a package list to 