@@ -1,5 +1,5 @@
 PACKAGE = gpe-package
-VERSION = 0.0.12
+VERSION = 0.0.13
 CVSBUILD = yes
 DEBUG = no
 INSTALL = install
